--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>css card hover effects | untoldcoding</title>
+    <title>Birthday Bash</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="untoldcoding">
+      <div class="untold">
         <div class="img-container">
           <img
             src="https://i.postimg.cc/ZKhfkqhD/Black-And-Gold-Happy-Birthday-Document-A4.png"
             alt=""
           />
         </div>
-        <div class="untoldcoding-details">
+        <div class="untold-details">
           <h2>Birthday Wishes</h2>
-          Happy Birthday to my amazing best friend! Your friendship is a
-          treasure, and I cherish every moment of laughter, support, and
-          adventures we’ve shared. You’re more than just a friend, you’re
-          family. May your birthday be as fantastic and special as you are,
-          filled with joy, love, and endless happy moments.
+         "Happy Birthday to my favorite ittefaq and the most cherished chapter of my life!
+          You shine like a diamond, illuminating my world with your presence.
+          Your friendship is invaluable and irreplaceable.
+          Here's to celebrating you today and every day.
+          Cheers to another year of unforgettable moments together!"
 
           <br /><br />
-          ---untoldcoding
+          ---untold
         </div>
       </div>
     </div>
